# SoCBirrt

./: .cproject  .project  3.mpg  LICENSE  README.md  cmovetraj.txt  data.txt  data.txt~  no_obstacle.py  no_obstacle.py~  run.sh  test.py  test.py~  test_test.py  test_test.py~
examples/python/: test.py~
ormodels/environments/: empty.env.xml  empty.env.xml~
planning/cbirrt2/: .cproject  cbirrt.h
planning/herb2ikfast/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
planning/socbirrt/: .cproject  .project  CMakeLists.txt  SensorConfiguration.cpp  SensorConfiguration.h  TaskSpaceRegion.h  manifest.xml  socbirrt.cpp  socbirrt.cpp~  socbirrt.h  socbirrt.h~  socbirrtmain.cpp  socbirrtmain.cpp~  socbirrtparameters.h  socbirrtparameters.h~  socbirrtproblem.cpp  socbirrtproblem.cpp~  socbirrtproblem.h  stdafx.h
